Requisitos 3.2, pontos 1, 2, 4, 5 e 7 adiantados